@@ -328,6 +328,7 @@ Holger Krekel
 Hannu Krosing
 Andrew Kuchling
 Vladimir Kushnir
+Arnaud Mazin
 Cameron Laird
 Tino Lange
 Andrew Langmead
